--- a/ansible/roles/xroad-ss/tasks/rhel.yml
+++ b/ansible/roles/xroad-ss/tasks/rhel.yml
@@ -15,15 +15,6 @@
         group: "root"
         mode: 0600
         force: no
-
-    - name: db.properties template
-      template:
-        src: "db.properties"
-        dest: "/etc/xroad/db.properties"
-        owner: "xroad"
-        group: "xroad"
-        mode: 0751
-        force: no
   when: (database_admin_password is defined) and (database_admin_password != "")
   tags:
     - install-xroad-ss-packages
@@ -34,21 +25,20 @@
     pkgs="{{ vars['xroad_varpkg_' + variant] if (vars['xroad_varpkg_' + variant] is string)
             else (vars['xroad_varpkg_' + variant] | join(' ')) }}"
     dnf -y install $pkgs
-  tags:
-    - install-xroad-ss-packages
   when:
     - ansible_os_family == 'RedHat'
     - ansible_distribution_major_version | int == 8
+  tags:
+    - install-xroad-ss-packages
 
 - name: install xroad packages and dependencies from set up repository (RHEL9+)
   yum:
     name: "{{ vars['xroad_varpkg_' + variant] }}"
     state: latest
-  tags:
-    - install-xroad-ss-packages
   when:
     - ansible_os_family == 'RedHat'
     - ansible_distribution_major_version | int >= 9
+  tags: [install-xroad-ss-packages]
 
 - name: install opmonitoring (RHEL8)
   shell: |
@@ -57,7 +47,7 @@
   when:
     - ansible_os_family == 'RedHat'
     - ansible_distribution_major_version | int == 8
-    - (xroad_install_opmonitoring is defined) and (xroad_install_opmonitoring)
+    - xroad_install_opmonitoring | default(false)
   tags:
     - install-xroad-ss-packages
 
@@ -68,7 +58,30 @@
   when:
     - ansible_os_family == 'RedHat'
     - ansible_distribution_major_version | int >= 9
-    - (xroad_install_opmonitoring is defined) and (xroad_install_opmonitoring)
+    - xroad_install_opmonitoring | default(false)
+  tags:
+    - install-xroad-ss-packages
+
+- name: db.properties template (final, after all packages)
+  template:
+    src: db.properties
+    dest: /etc/xroad/db.properties
+    owner: xroad
+    group: xroad
+    mode: "0640"
+    force: yes
+  when: (database_admin_password is defined) and (database_admin_password != "")
+  tags:
+    - install-xroad-ss-packages
+
+- name: Verify db.properties contains required DB URLs
+  shell: |
+    set -euo pipefail
+    grep -q '^serverconf\.hibernate\.connection\.url' /etc/xroad/db.properties
+    grep -q '^messagelog\.hibernate\.connection\.url' /etc/xroad/db.properties
+    grep -q '^op-monitor\.hibernate\.connection\.url' /etc/xroad/db.properties
+  changed_when: false
+  when: (database_admin_password is defined) and (database_admin_password != "")
   tags:
     - install-xroad-ss-packages
 
