--- a/ansible/roles/xroad-ss/tasks/rhel.yml
+++ b/ansible/roles/xroad-ss/tasks/rhel.yml
@@ -28,6 +28,28 @@
   tags:
     - install-xroad-ss-packages
 
+- name: Install PostgreSQL packages (RHEL8)
+  become: yes
+  shell: |
+    set -euo pipefail
+    dnf -y install postgresql-server postgresql-contrib
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version | int == 8
+    - not ((database_admin_password is defined) and (database_admin_password != ""))
+
+- name: Install PostgreSQL packages (RHEL9+)
+  become: yes
+  yum:
+    name:
+      - postgresql-server
+      - postgresql-contrib
+    state: present
+  when:
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version | int >= 9
+    - not ((database_admin_password is defined) and (database_admin_password != ""))
+
 - name: install xroad packages and dependencies from set up repository (RHEL8)
   shell: |
     set -euo pipefail
