--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ xmlUnit = "2.10.3"
 bouncyCastle = "1.81"
 slf4j = "2.0.17"
 testAutomationFramework = "0.2.21"
+selenide="7.12.0"
 protoc = "4.31.1"
 grpc = "1.73.0"
 swaggerParser = "2.1.30"
@@ -75,6 +76,8 @@ testAutomation-feign = { module = "com.nortal.test:test-automation-feign", versi
 testAutomation-selenide = { module = "com.nortal.test:test-automation-selenide", version.ref = "testAutomationFramework" }
 testAutomation-assert = { module = "com.nortal.test:test-automation-assert", version.ref = "testAutomationFramework" }
 testAutomation-restassured = { module = "com.nortal.test:test-automation-restassured", version.ref = "testAutomationFramework" }
+test-selenide-core = { module = "com.codeborne:selenide", version.ref = "selenide" }
+test-selenide-proxy = { module = "com.codeborne:selenide-proxy", version.ref = "selenide" }
 
 jakarta-validationApi = { module = "jakarta.validation:jakarta.validation-api", version = "3.1.1" }
 jakarta-servletApi = { module = "jakarta.servlet:jakarta.servlet-api", version = "6.1.0" }
