--- a/src/common/common-int-test/build.gradle
+++ b/src/common/common-int-test/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     api(libs.testAutomation.selenide) {
         exclude group: "org.slf4j", module: "*"
     }
+    api(libs.test.selenide.core)
+    api(libs.test.selenide.proxy)
     api(libs.bouncyCastle.bcpkix)
     api(libs.awaitility)
 }
