--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -17,7 +17,8 @@ junitJupiter = "5.11.4"
 xmlUnit = "2.10.0"
 bouncyCastle = "1.80"
 slf4j = "2.0.16"
-testAutomationFramework = "0.2.20"
+testAutomationFramework = "0.2.21"
+selenide="7.12.0"
 protoc = "4.29.0"
 grpc = "1.68.2"
 swaggerParser = "2.1.25"
@@ -73,6 +74,8 @@ testAutomation-feign = { module = "com.nortal.test:test-automation-feign", versi
 testAutomation-selenide = { module = "com.nortal.test:test-automation-selenide", version.ref = "testAutomationFramework" }
 testAutomation-assert = { module = "com.nortal.test:test-automation-assert", version.ref = "testAutomationFramework" }
 testAutomation-restassured = { module = "com.nortal.test:test-automation-restassured", version.ref = "testAutomationFramework" }
+test-selenide-core = { module = "com.codeborne:selenide", version.ref = "selenide" }
+test-selenide-proxy = { module = "com.codeborne:selenide-proxy", version.ref = "selenide" }
 
 jakarta-validationApi = { module = "jakarta.validation:jakarta.validation-api", version = "3.1.0" }
 jakarta-servletApi = { module = "jakarta.servlet:jakarta.servlet-api", version = "6.1.0" }
