feat: Change service type from oneshot to simple
Refs: XRDDEV-3061

--- a/src/autologin/source/redhat/xroad-autologin.service
+++ b/src/autologin/source/redhat/xroad-autologin.service
@@ -3,7 +3,7 @@ Description=X-Road Automatic Token Login
 After=xroad-signer.service
 
 [Service]
-Type=oneshot
+Type=simple
 User=xroad
 Group=xroad
 ExecStart=/usr/share/xroad/autologin/xroad-autologin-retry.sh
