--- a/ansible/roles/xroad-autologin/tasks/main.yml
+++ b/ansible/roles/xroad-autologin/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: autologin configuration
-  template:
-    src: "xroad-autologin.j2"
+  ansible.builtin.template:
+    src: "{{ 'xroad-autologin-hsm.j2' if 'ubuntu_hsm_ss' in group_names else 'xroad-autologin.j2' }}"
     dest: "/etc/xroad/autologin"
     owner: root
     group: xroad
