--- a/development/ansible/roles/xroad-ss/tasks/hwtokens.yml
+++ b/development/ansible/roles/xroad-ss/tasks/hwtokens.yml
@@ -20,66 +20,51 @@
         append: yes
         groups: softhsm
 
-    - name: Read SoftHSM slots (before)
+    - name: Check existing SoftHSM slots for token label
       command: softhsm2-util --show-slots
-      register: softhsm_slots_before
+      register: softhsm_slots
       changed_when: false
 
-    - name: Initialize SoftHSM token if label not present
+    - name: Initialize SoftHSM token (idempotent if label already present)
       command: >
         softhsm2-util --init-token
         --slot 0
-        --label {{ hwtoken_label | quote }}
-        --so-pin {{ hwtoken_so_pin | quote }}
-        --pin {{ hwtoken_user_pin | quote }}
-      when: softhsm_slots_before.stdout is not search(hwtoken_label | regex_escape)
+        --label "{{ hwtokens_label }}"
+        --so-pin "{{ hwtokens_so_pin }}"
+        --pin "{{ hwtokens_user_pin }}"
+      when: softhsm_slots.stdout is not search("Label\\s*:\\s*{{ hwtokens_label | regex_escape() }}")
       register: init_result
       changed_when: init_result.rc == 0
 
-    - name: Read SoftHSM slots (after)
-      command: softhsm2-util --show-slots
-      register: softhsm_slots_after
+    - name: Show token initialization status
+      debug:
+        msg: >-
+          {{ "Token already present; no changes made."
+             if softhsm_slots.stdout is search("Label\\s*:\\s*{{ hwtokens_label | regex_escape() }}")
+             else "The token has been initialized." }}
+
+    - name: Capture SoftHSM2 slot id for label
+      shell: >
+        softhsm2-util --show-slots | awk '/^Slot / { slot=$2 } /Label: *{{ hwtokens_label }}/ { print slot }'
+      register: softhsm2_slot_id
       changed_when: false
 
-    - name: Get slot id for token label
-      shell: |
-        softhsm2-util --show-slots | awk '
-          /^Slot[[:space:]]+/ { slot=$2 }
-          /Label:[[:space:]]*{{ hwtoken_label | regex_escape }}/ { print slot; exit }'
-      args:
-        executable: /bin/bash
-      register: slot_id_cmd
-      changed_when: false
-
-    - name: Set slot id fact
-      set_fact:
-        softhsm2_slot_id: "{{ slot_id_cmd.stdout | trim }}"
-
-    - name: Fail if slot id not found for token label
-      fail:
-        msg: "Could not determine slot id for SoftHSM token label '{{ hwtoken_label }}'. Output was: {{ softhsm_slots_after.stdout }}"
-      when: softhsm2_slot_id == ""
-
-    - name: Ensure devices.ini exists
-      file:
-        path: "/etc/xroad/devices.ini"
-        state: touch
-        owner: root
-        group: root
-        mode: "0644"
-
-    - name: Configure SoftHSM as a hardware token in X-Road devices.ini
+    - name: Append SoftHSM2 signer module to end of local.yaml
       blockinfile:
-        path: "/etc/xroad/devices.ini"
-        marker: "# {mark} ANSIBLE MANAGED BLOCK (SoftHSM)"
+        path: /etc/xroad/conf.d/local.yaml
+        insertafter: EOF
+        marker: "# {mark} SoftHSM2 signer module"
         block: |
-          [softhsm2]
-          library = /usr/lib/softhsm/libsofthsm2.so
-          slot_ids = {{ softhsm2_slot_id }}
-          token_id_format = 1
-          os_locking_ok = true
-          library_cant_create_os_threads = true
-    
+          # hardware token configuration:
+            signer:
+              modules:
+                softhsm2:
+                  library: /usr/lib/softhsm/libsofthsm2.so
+                  os-locking-ok: true
+                  library-cant-create-os-threads: true
+                  slot-ids: {{ softhsm2_slot_id.stdout | trim }}
+                  token_id_format: 1
+
     - name: Recursively chown tokens to xroad
       become: true
       file:
