--- a/src/service/ds-control-plane/ds-control-plane-application/src/main/resources/application.yaml
+++ b/src/service/ds-control-plane/ds-control-plane-application/src/main/resources/application.yaml
@@ -6,7 +6,26 @@ quarkus:
       - xroad-common.yaml
       - xroad-logging.yaml
   log:
-    level: DEBUG
+    level: INFO
+    category:
+      "EDC":
+        level: DEBUG
+
+"%native":
+  quarkus:
+    config:
+      locations:
+        - xroad-common.yaml
+        - xroad-logging.yaml
+        - /etc/xroad/conf.d/local-tls.yaml
+        - /etc/xroad/conf.d/local.yaml
+        - /etc/xroad/db.properties
+    log:
+      console:
+        enabled: false
+      file:
+        enabled: true
+        path: /var/log/xroad/ds-control-plane.log
 
 web:
   http:
@@ -34,9 +53,9 @@ edc:
             alias: public-key
   datasource:
     default:
-      url: jdbc:postgresql://localhost:5432/edc
-      user: edc
-      password: password
+      url: ${xroad.db.ds-control-plane.hibernate.connection.url}
+      user: ${xroad.db.ds-control-plane.hibernate.connection.username}
+      password: ${xroad.db.ds-control-plane.hibernate.connection.password}
   sql:
     schema:
       autocreate: true
