fix: improve autologin setup for lxd environment

--- a/development/ansible/roles/xroad-ss/tasks/hwtokens.yml
+++ b/development/ansible/roles/xroad-ss/tasks/hwtokens.yml
@@ -63,7 +63,7 @@
                   os-locking-ok: true
                   library-cant-create-os-threads: true
                   slot-ids: {{ softhsm2_slot_id.stdout | trim }}
-                  token_id_format: 1
+                  token-id-format: 1
 
     - name: Recursively chown tokens to xroad
       become: true
