chore: initial tests for ds control plane
Refs: XRDDEV-3066

--- a/development/docker/security-server/env.template
+++ b/development/docker/security-server/env.template
@@ -21,4 +21,6 @@ PROXY_IMG=localhost:5555/ss-proxy:7.8.0-SNAPSHOT
 PROXY_UI_IMG=localhost:5555/ss-proxy-ui-api:7.8.0-SNAPSHOT
 BACKUP_MANAGER_IMG=localhost:5555/ss-backup-manager:7.8.0-SNAPSHOT
 OP_MONITOR_IMG=localhost:5555/ss-op-monitor:7.8.0-SNAPSHOT
+DS_CONTROL_PLANE_IMG=localhost:5555/ds-control-plane:7.8.0-SNAPSHOT
+DS_DATA_PLANE_IMG=localhost:5555/ds-data-plane:7.8.0-SNAPSHOT
 
