--- a/src/security-server/system-test/src/intTest/resources/test-automation.yaml
+++ b/src/security-server/system-test/src/intTest/resources/test-automation.yaml
@@ -7,6 +7,7 @@ test-framework:
       - "org.niis.xroad.ss.test.ui.glue"
       - "org.niis.xroad.ss.test.addons.glue"
       - "org.niis.xroad.ss.test.globalconf.glue"
+      - "org.niis.xroad.ss.test.ds.glue"
       - "org.niis.xroad.test.framework"
     filter-tags: "not @Skip"
   selenide:
