--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -1,4 +1,21 @@
 services:
+  openbao:
+    image: ${OPENBAO_DEV_IMG}
+    pull_policy: always
+    environment:
+      - BAO_ADDR=http://0.0.0.0:8200
+      - BAO_TOKEN=${XROAD_SECRET_STORE_ROOT_TOKEN}
+      - XROAD_SECRET_STORE_TOKEN_OVERRIDE=${XROAD_SECRET_STORE_TOKEN:-}
+    healthcheck:
+      interval: 5s
+      retries: 40
+      test: [ "CMD", "sh", "-c", "bao secrets list -format=json | jq 'has(\"xrd-pki/\")' | grep -q true" ]
+    deploy:
+      resources:
+        reservations:
+          memory: 64M
+        limits:
+          memory: 256M
   signer:
     build:
       context: ./signer-container-files/
@@ -7,8 +24,10 @@ services:
       dockerfile: Dockerfile
     pull_policy: always
     environment:
-      - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dxroad.internal.passwordstore-file-path=/etc/xroad/
       - XROAD_HOST=signer
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
+      - XROAD_SECRET_STORE_SCHEME=http
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
@@ -17,6 +36,8 @@ services:
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
       - XROAD_SIGNER_RPC_LISTEN_ADDRESS=0.0.0.0
+      - XROAD_SIGNER_AUTOLOGIN=true
+      - XROAD_SIGNER_TOKENS__0__PIN=4321
       - XROAD_SIGNER_ADDON_HWTOKEN_ENABLED=true
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION_POOL_ENABLED=true
       - XROAD_SIGNER_ADDON_HWTOKEN_SESSION_POOL_MAX_TOTAL=3
@@ -37,6 +58,8 @@ services:
     depends_on:
       db-serverconf-init:
         condition: service_completed_successfully
+      openbao:
+        condition: service_healthy
     deploy:
       resources:
         reservations:
@@ -55,9 +78,11 @@ services:
     pull_policy: always
     environment:
       - XROAD_HOST=signer-secondary
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
+      - XROAD_SECRET_STORE_SCHEME=http
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
-      - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dxroad.internal.passwordstore-file-path=/etc/xroad/
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-serverconf:5432/serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
