--- a/src/service/softtoken-signer/softtoken-signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/softtoken-signer/softtoken-signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -1,4 +1,22 @@
 services:
+  openbao:
+    image: ${OPENBAO_DEV_IMG}
+    pull_policy: always
+    environment:
+      - BAO_ADDR=http://0.0.0.0:8200
+      - BAO_TOKEN=${XROAD_SECRET_STORE_ROOT_TOKEN}
+      - XROAD_SECRET_STORE_TOKEN_OVERRIDE=${XROAD_SECRET_STORE_TOKEN:-}
+    healthcheck:
+      interval: 5s
+      retries: 40
+      test: [ "CMD", "sh", "-c", "bao secrets list -format=json | jq 'has(\"xrd-pki/\")' | grep -q true" ]
+    deploy:
+      resources:
+        reservations:
+          memory: 64M
+        limits:
+          memory: 256M
+
   db-serverconf:
     image: postgres:17
     environment:
@@ -43,6 +61,9 @@ services:
     pull_policy: always
     environment:
       - XROAD_HOST=signer
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
+      - XROAD_SECRET_STORE_SCHEME=http
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
@@ -62,6 +83,8 @@ services:
     depends_on:
       db-serverconf-init:
         condition: service_completed_successfully
+      openbao:
+        condition: service_healthy
     deploy:
       resources:
         reservations:
@@ -75,7 +98,7 @@ services:
     image: ${SOFTTOKEN_SIGNER_IMG}
     pull_policy: always
     environment:
-      - DEBUG=true
+      - XROAD_HOST=softtoken-signer
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_SOFTTOKEN_SIGNER_RPC_LISTEN_ADDRESS=0.0.0.0
       - XROAD_SOFTTOKEN_SIGNER_KEYS_SYNC_RATE=3S
