chore: Add 7->8 upgrade migration scripts

--- a/deployment/native-packages/src/xroad/ubuntu/generic/control
+++ b/deployment/native-packages/src/xroad/ubuntu/generic/control
@@ -50,6 +50,8 @@ Description: X-Road nginx component
 Package: xroad-signer
 Architecture: amd64 arm64
 Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-secret-store-local (=${binary:Version}) | xroad-secret-store-remote (=${binary:Version})
+Replaces: xroad-autologin (<< 8.0.0)
+Breaks: xroad-autologin (<< 8.0.0)
 Description: X-Road signer component
  X-Road signer components and utilities
 
@@ -118,12 +120,6 @@ Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-confclient (=${
 Pre-Depends: xroad-database-local (=${binary:Version}) | xroad-database-remote (=${binary:Version})
 Description: X-Road operations monitoring daemon
  X-Road operations monitoring daemon
-
-Package: xroad-autologin
-Architecture: all
-Depends: ${misc:Depends}, expect, xroad-signer (=${binary:Version})
-Description: Automatic token pin code entry
- Optional utility that automatically enters the software token pin code on xroad-signer start
 
 Package: xroad-proxy-ui-api
 Architecture: all
