feat: POC for protocol translation layer
Refs: XRDDEV-3008

--- a/src/service/proxy/proxy-core/src/test/resources/logging.properties
+++ b/src/service/proxy/proxy-core/src/test/resources/logging.properties
@@ -1,9 +1,11 @@
-loggers=org.jboss.logmanager
+loggers=org.jboss.logmanager,org.niis,ee.ria
 
 # Root logger
-logger.level=OFF
+logger.level=INFO
 logger.handlers=CONSOLE
 
+logger.org.niis.level=DEBUG
+logger.ee.ria.level=DEBUG
 logger.org.jboss.logmanager.useParentHandlers=true
 
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
