--- a/development/ansible/roles/xroad-is/tasks/setup-xrd4j.yml
+++ b/development/ansible/roles/xroad-is/tasks/setup-xrd4j.yml
@@ -14,6 +14,7 @@
       - curl
       - jq
     update_cache: yes
+    install_recommends: no
     state: present
 
 - name: Get latest example-adapter version
