--- a/deployment/security-server/images/init-db/Dockerfile
+++ b/deployment/security-server/images/init-db/Dockerfile
@@ -1,5 +1,13 @@
 FROM liquibase:4.33.0
 
+# Optimize APT for flaky mirrors (e.g. ports.ubuntu.com)
+USER root
+RUN echo 'Acquire::Connect::Timeout "5";' > /etc/apt/apt.conf.d/99timeouts && \
+    echo 'Acquire::http::Timeout "10";' >> /etc/apt/apt.conf.d/99timeouts && \
+    echo 'Acquire::https::Timeout "10";' >> /etc/apt/apt.conf.d/99timeouts && \
+    echo 'Acquire::Retries "3";' >> /etc/apt/apt.conf.d/99timeouts && \
+    echo 'Acquire::ForceIPv4 "true";' > /etc/apt/apt.conf.d/99force-ipv4
+
 # Build arg for the changelog file name (e.g., "serverconf-changelog.xml")
 ARG CHANGELOG_FILE
 
