--- a/development/ansible/roles/init-lxd/tasks/main.yml
+++ b/development/ansible/roles/init-lxd/tasks/main.yml
@@ -38,7 +38,10 @@
   with_inventory_hostnames: all:!lxd_servers:!rhel_ss:!localhost
 
 - name: Switch to fast Estonian mirror (xtom.ee)
-  raw: sed -i 's|http://ports.ubuntu.com/ubuntu-ports|http://mirrors.xtom.ee/ubuntu-ports|g' /etc/apt/sources.list.d/ubuntu.sources
+  ansible.builtin.replace:
+    path: /etc/apt/sources.list.d/ubuntu.sources
+    regexp: 'http://ports.ubuntu.com/ubuntu-ports'
+    replace: 'http://mirrors.xtom.ee/ubuntu-ports'
   delegate_to: "{{ item }}"
   with_inventory_hostnames: all:!lxd_servers:!rhel_ss:!localhost
 
